FIx minor layout bugs

--- a/static/style.less
+++ b/static/style.less
@@ -68,6 +68,7 @@ input::-webkit-inner-spin-button {
 	border-bottom: 1px solid @well-border;
 	.box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
 	margin-bottom: 20px;
+	padding-top: 20px;
 }
 
 /// review styles
